updating .toml file to correct folder name for pip installation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ requires = [
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "kmeans_takasuka"
+name = "cluster"
 authors = [{name = "Hannah Takasuka", email = "hannah.takasuka@ucsf.edu"}]
 readme = "README.md"
 license = {file = "LICENSE"}
